feat: migrated to ts

--- a/src/components/view/sources/sources.css
+++ b/src/components/view/sources/sources.css
@@ -8,23 +8,46 @@
     font: 300 1em 'Fira Sans', sans-serif;
 }
 
+
+.sources::-webkit-scrollbar-track
+{
+    height: 10px;
+    width: 6px;
+	background-color: #dadada;
+}
+
+.sources::-webkit-scrollbar
+{
+	height: 10px;
+    width: 30px;
+	background-color: #F5F5F5;
+}
+
+.sources::-webkit-scrollbar-thumb
+{
+
+	background-color: #000000;
+}
+
+
+
 .source__item {
-    background: none;
-    border: 2px solid #30c5ff;
+    background: rgb(230, 230, 230);
+    border-radius: 50px;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
     padding: 1em 2em;
-    color: #70d6ff;
+    color: #131313;
     transition: 0.25s;
     cursor: pointer;
 }
 
 .source__item:hover,
 .source__item:focus {
-    border-color: #3fcc59;
+    opacity: 0.6;
     color: #69db7e;
-    box-shadow: 0 0.5em 0.5em -0.4em #3fcc59;
+    box-shadow: 0 0.5em 0.5em -0.4em #aeaeae;
     transform: translateY(-0.25em);
 }
 
