--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,11 +3,16 @@
     margin: 0;
 }
 header{
-    display: flex;
     width: 100%;
     height: 120px;
-    align-items: center;
     background: rgb(33, 33, 33);
+}
+header .section{
+    display: flex;
+    align-items: center;
+    height: 100%;
+    max-width: 1024px;
+    margin: auto;
 }
 .page-name, .github-link{
     color: rgb(255, 255, 255);
