--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,5 +43,6 @@ footer .logo{
     margin-left: 8px;
 }
 footer p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-right: 8px;
 }
